<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="178dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quiz" />

            <EditText
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/textbox_back"
                android:hint="@string/textview_username"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/textbox_back"
                android:hint="@string/textview_email"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/passWordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/textbox_back"
                android:hint="@string/textview_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="22sp" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginbuttom_back"
                android:hint="@string/btn_signup"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>